k8s/base/ingress.srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - psychoschool.ru
        - www.psychoschool.ru
      secretName: psychoschool-ru
  rules:
    - host: psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-front-srv
                port:
                  number: 5000
    - host: api.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-api-srv
                port:
                  number: 8080
    - host: staging.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-front-stage-srv
                port:
                  number: 5000
    - host: api-stage.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-api-stage-srv
                port:
                  number: 8080
    - host: www.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-front-srv
                port:
                  number: 5000
    - host: www.api.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-api-srv
                port:
                  number: 8080
    - host: www.staging.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-front-stage-srv
                port:
                  number: 5000
    - host: www.api-stage.psychoschool.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: psycho-api-stage-srv
                port:
                  number: 8080
